apps/lldap/components/tls/patch-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: lldap
spec:
  ports:
    - name: ldaps
      appProtocol: ldaps
      port: 6360
      targetPort: ldaps
